--- a/src/frontend/src/app/Admin/users/users.component.css
+++ b/src/frontend/src/app/Admin/users/users.component.css
@@ -170,3 +170,14 @@ input:focus {
 .btn:hover {
   background-color: #009999;
 }
+.function .delete{
+  border-radius: 8px;
+  border: none;
+  background-color: #01bfbf;
+  color:white;
+  width: 130px;
+  height: 27px;
+  text-align: start;
+}
+.function .delete .del{width: 22px; height: 22px; position: relative; top: -1.5px; left: 6px; margin-right: 5px;}
+.function .delete:hover{ background-color: #7d8080; transition: 0.2s ease-in-out;}
