--- a/src/frontend/src/app/Admin/ward/ward.component.html
+++ b/src/frontend/src/app/Admin/ward/ward.component.html
@@ -6,7 +6,8 @@
         || search_data_id.typeOfAnimal || search_data_id.animalAge || search_data_id.animalSex || search_data_id.animalSize 
         || search_data_id.experience || search_data_id.shelterName">Очистити пошук</button>
         <button class="search" (click)="OpenSearchForm()"> <img src="search.png" alt=""> Пошук</button>
-   
+        <button class="delete" (click)="OpeneDelete()"><img src="delete.png" alt="/" class="del"> Видалити</button>
+
     </div>
 
     <div class="table">
@@ -102,6 +103,20 @@
          <label for="namesh">Назва притулку:</label>
          <input type="text" [(ngModel)]="search_data_id.shelterName"  placeholder="Назва притулку">
          <button (click)="closeSearch()">Знайти</button>
+    </div>
+  </div>
+
+  <div *ngIf="DELETE" class="modal">
+    <div class="modal-content">
+      <span (click)="closeModalDelete()" class="close-button">&times;</span>
+       
+             <h3></h3>
+        <label for="name">ID:</label>
+        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID користувача">
+        
+        <div>
+            <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
+        </div>
     </div>
   </div>
 </div>
