improved add admin function

--- a/src/frontend/src/app/Admin/users/users.component.html
+++ b/src/frontend/src/app/Admin/users/users.component.html
@@ -82,11 +82,11 @@
       <form (ngSubmit)="register()" class="registration-form">
         <div class="form-group">
           <label for="email">Електронна пошта:</label>
-          <input id="email" [(ngModel)]="emailadmin" name="email" type="email" required placeholder="Електронна пошта">
+          <input id="email" [(ngModel)]="emailAdmin" name="email" type="email" required placeholder="Електронна пошта">
         </div>
         <div class="form-group">
           <label for="password">Пароль:</label>
-          <input id="password" [(ngModel)]="password" name="password" type="password" required placeholder="Пароль">
+          <input id="password" [(ngModel)]="passwordAdmin" name="password" type="password" required placeholder="Пароль">
         </div>
         <div class="form-group">
           <label for="passwordAgain">Підтвердіть пароль:</label>
@@ -104,17 +104,17 @@
   <div *ngIf="DELETE" class="modal">
     <div class="modal-content">
       <span (click)="closeModalDelete()" class="close-button">&times;</span>
-       
+
              <h3></h3>
         <label for="name">ID:</label>
         <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID користувача">
-        
+
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
         </div>
       <!-- (click)="seandDelete()" -->
     </div>
   </div>
-  
+
 </div>
 
