--- a/src/frontend/src/app/donate/donate.component.css
+++ b/src/frontend/src/app/donate/donate.component.css
@@ -281,3 +281,24 @@ body {
 @media (min-widht: 550px) and (max-widht: 800px) {
   .shelter-card { }
 }
+/* @media (min-widht: 320px) and (max-widht: 800px) {
+   .scroll-to-top {
+    display: none;
+  }
+} */
+ 
+@media (min-width: 320px) and (max-width: 500px) {
+  .Prozoro {
+    padding: 15px;
+  }
+  
+  .Prozoro h1 {
+    font-size: 22px;
+    text-align: center;
+  }
+
+  .Prozoro h2 {
+    font-size: 16px;
+  }
+ 
+}
