--- a/src/frontend/src/app/Admin/tabel-animals/tabel-animals.component.html
+++ b/src/frontend/src/app/Admin/tabel-animals/tabel-animals.component.html
@@ -27,6 +27,9 @@
                 <th>Стать</th>
                 <th>Розмір</th>
                 <th>Тип</th>
+                <th>Вакцинована</th>
+                <th>Стерелізована</th>
+                <th>Потребує особливого догляду</th>
                 <th>Телефон</th>
                 <th>Назва притулку</th>
              
@@ -42,6 +45,9 @@
                 <td>{{shelters.sex}}</td>
                 <td>{{shelters.size}}</td>
                 <td>{{shelters.type}}</td>
+                <td>{{shelters.vaccinated}}</td>
+                <td>{{shelters.sterilized}}</td>
+                <td>{{shelters.specialCare}}</td>
                 <td>{{shelters.shelterPhoneNumber}}</td>
                 <td>{{shelters.shelterName}}</td>
               
@@ -69,9 +75,15 @@
             <label for="address">Опис:</label>
             <input type="text" id="address" [(ngModel)]="descript">
 
-            <label for="contactNumber">Розмір</label>
+            <label for="contactNumber">Розмір:</label>
             <input type="text" id="contactNumber" [(ngModel)]="size">
           
+            <label for="vaccinated">Вакцинована:</label>
+            <input type="checkbox" id="vaccinated" [(ngModel)]="vaccinated">
+            <label for="steril">Стерелізована:</label>
+            <input type="checkbox" id="steril" [(ngModel)]="steril">
+            <label for="specialCare">Потребує особливого догляду:</label>
+            <input type="checkbox" id="specialCare" [(ngModel)]="specialCare">
 
             <div>
                 <button class="confirm_edit" (click)="SendEditedShelter()">Внести зміни</button>
