Додав тещо треба

--- a/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.css
+++ b/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.css
@@ -152,10 +152,39 @@ input[type='search']{padding: 10px;}
   margin-bottom: 10px;
 }
 
+.secretinfo{
+  margin: 20px;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+/* .secretinfo .emailShelter{}
+.secretinfo .card{}
+.secretinfo .PayPal{}
+.secretinfo .IBAN{} */
 
 
+/* .secretinfo label {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+} */
+.check{
+  margin: 20px;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.check input[type="checkbox"] {
+  margin-right: 10px;
+  transform: scale(1.2);
+  accent-color: #01a9a9;
+}
 
-
+.check input[type="checkbox"]:hover {
+  cursor: pointer;
+}
 
 
 
