--- a/src/frontend/src/app/donate/donate.component.html
+++ b/src/frontend/src/app/donate/donate.component.html
@@ -25,9 +25,9 @@
         <p>Email: {{ shelter.email }}</p>
 
         <h3>Ревізити для переказу:</h3>
-        <p>{{ shelter.card }}</p>
-        <p>{{ shelter.paypal }}</p>
-        <p>{{ shelter.iban }}</p>
+        <p>Карта: {{ shelter.card }}</p>
+        <p>PayPal: {{ shelter.paypal }}</p>
+        <p>IBAN: {{ shelter.iban }}</p>
       </div>
     </div>
   </div>
