--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -128,7 +128,7 @@
          <input type="email" id="email1" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
 
          <label for="phone">Телефон:</label>
-         <input type="tel" id="contactNumber" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
+         <input type="number" id="contactNumber" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
 
 
          <label for="exp">Чи маєте досвід догляду за тваринами?</label>
@@ -170,7 +170,7 @@
             <input type="email" id="email2" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
 
             <label for="phone">Телефон:</label>
-            <input type="tel" id="phone" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
+            <input type="number" id="phone" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
 
 
            <label for="exp">Чи маєте досвід догляду за тваринами?</label>
