--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -11,7 +11,10 @@ body {
   height: 100%;
 
 }
-
+/* .Descktop .dropdown-content{
+  position:absolute;
+  left: 0;
+} */
 .nav-item.active > .nav-link {
  border-bottom: solid;
 }
@@ -318,7 +321,7 @@ nav ul li .Registr_pc:hover {
   background-color: #333;
   min-width: 160px;
   z-index: 1;
-  left: 200px;
+  left: 310px;
 }
 
 .dropdown-content a {
@@ -335,6 +338,32 @@ nav ul li .Registr_pc:hover {
 
 /* Показати випадаюче меню при наведенні */
 .nav-item:hover .dropdown-content {
+  display: block;
+  border-radius: 10px;
+}
+.dropdown-contentPhone {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  z-index: 1;
+  left: 100px;
+}
+
+.dropdown-contentPhone a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-contentPhone a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Показати випадаюче меню при наведенні */
+.nav-item:hover .dropdown-contentPhone {
   display: block;
   border-radius: 10px;
 }
@@ -470,6 +499,17 @@ footer {
     top: 8px;
     left: -12px;
   }
+ 
+}
+@media (min-width: 992px) and (max-width: 1230px) {
+  .login{
+    display: flex;
+    margin-top: 10px;    
+  }
+  .login .photo{
+    margin-top: 5px; 
+  }
+ 
 }
 
 
