--- a/src/frontend/src/app/blog-and-news/blog-and-news.component.css
+++ b/src/frontend/src/app/blog-and-news/blog-and-news.component.css
@@ -10,7 +10,8 @@ body{
     background: linear-gradient(135deg, #ffffff, #f2f2f2);
     font-family: "e-ukr";
     padding: 40px;
-    
+    position: relative;
+overflow-x: hidden;
 
   }
 
