tested all functions

--- a/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.html
+++ b/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.html
@@ -67,7 +67,7 @@
       <span (click)="closeModal()" class="close-button">&times;</span>
         <!-- <input type="text" id="name" [(ngModel)]="id"> -->
              <h3>Редагування інформації про притулок</h3>
-        <label for="name">Ім'я:</label>
+        <label for="name">Назва:</label>
         <input type="text" id="name" [(ngModel)]="name" placeholder="Ім'я">
         <label for="city">Місто:</label>
         <input type="text" id="city" [(ngModel)]="city" placeholder="Місто">
@@ -83,14 +83,14 @@
         <label for="description">Опис:</label>
         <input type="text" id="description" [(ngModel)]="description" placeholder="Опис">
 
-        
+
         <div class="secretinfo">
 
           <div>
               <label for="emailShelter">Почта:</label>
               <input type="text" id="emailShelter" [(ngModel)]="emailShelter" placeholder="Почта">
           </div>
-         
+
         <div >
            <label for="card">Карта:</label>
         <input type="number" id="card" [(ngModel)]="card" placeholder="Карта">
@@ -122,7 +122,7 @@
 
              <!-- <label for="name">ID:</label>
              <input type="text" id="name" [(ngModel)]="id"> -->
-        <label for="name">Ім'я:</label>
+        <label for="name">Назва:</label>
         <input type="text" id="name" [(ngModel)]="name" placeholder="Ім'я">
         <label for="city">Місто:</label>
         <input type="text" id="city" [(ngModel)]="city" placeholder="Місто">
@@ -150,7 +150,7 @@
               <label for="emailShelter">Почта:</label>
               <input type="text" id="emailShelter" [(ngModel)]="emailShelter" placeholder="Почта">
           </div>
-         
+
         <div >
            <label for="card">Карта:</label>
         <input type="number" id="card" [(ngModel)]="card" placeholder="Карта">
@@ -167,7 +167,7 @@
         </div>
 
         </div>
-       
+
         <div>
             <button class="confirm_edit" (click)="AddShelter()">Додати притулок</button>
         </div>
@@ -252,7 +252,7 @@
             <label for="specialCare">Потребує особливого догляду:</label>
             <input type="checkbox" id="specialCare" [(ngModel)]="specialCare" placeholder="Вакцинована">
             </div>
-            
+
 
             <input type="hidden" id="city" [(ngModel)]="city_animals" >
             <input type="hidden" id="shelterphine" [(ngModel)]="contactshelter_animals">
