--- a/src/frontend/src/app/about/about.component.html
+++ b/src/frontend/src/app/about/about.component.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <button class="scroll-to-top" (click)="scrollToTop()"  [class.show]="isScrollToTopVisible">↑</button>
-  
+
 <div class="alltext" >
   <div class="find">
     <h1>Знайдіть собі друга!</h1>
@@ -115,7 +115,7 @@
 
   <div class="Dev1">
     <img class="AB" src="/artem.jpg" alt="FF_LOGO"/>
-    <p class="name">Artem Bilinskiy</p>
+    <p class="name">Artem Bilinskyi</p>
     <p class="job">Project Manager, Backend Developer</p>
     <div class="contactu">
     <ol>
