--- a/src/frontend/src/app/Admin/volonters/volonters.component.html
+++ b/src/frontend/src/app/Admin/volonters/volonters.component.html
@@ -1,7 +1,7 @@
 <div class="all-items">
 
     <div class="function">
-        <button class="clearbutton" (click)="CleanSearchForm()" *ngIf="search_data_id.id || search_data_id.firstName || search_data_id.lastName ||search_data_id.contactNumber 
+        <button class="clearbutton" (click)="CleanSearchForm()" *ngIf="search_data_id.id || search_data_id.firstName || search_data_id.lastName ||search_data_id.contactNumber
         || search_data_id.email || search_data_id.shelterName   ">Очистити пошук</button>
 
         <button class="search" (click)="OpenSearchForm()"> <img src="search.png" alt=""> Пошук</button>
@@ -55,7 +55,7 @@
             <div>
                 <button class="confirm_edit" (click)="SendEditedUser()">Внести зміни</button>
             </div>
-          
+
         </div>
       </div> -->
 
@@ -84,15 +84,15 @@
          <button (click)="closeSearch()">Знайти</button>
     </div>
   </div>
-  
+
   <div *ngIf="DELETE" class="modal">
     <div class="modal-content">
       <span (click)="closeModalDelete()" class="close-button">&times;</span>
-       
+
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="Id" placeholder="ID користувача">
-        
+        <input type="text" id="name" [(ngModel)]="Id" placeholder="ID заявки">
+
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
         </div>
