--- a/src/frontend/src/app/Admin/ward/ward.component.html
+++ b/src/frontend/src/app/Admin/ward/ward.component.html
@@ -1,9 +1,9 @@
 <div class="all-items">
 
     <div class="function">
-        <button class="clearbutton" (click)="CleanSearchForm()" *ngIf="search_data_id.id || search_data_id.email 
+        <button class="clearbutton" (click)="CleanSearchForm()" *ngIf="search_data_id.id || search_data_id.email
         || search_data_id.contactNumber || search_data_id.firstName || search_data_id.lastName || search_data_id.animalName
-        || search_data_id.typeOfAnimal || search_data_id.animalAge || search_data_id.animalSex || search_data_id.animalSize 
+        || search_data_id.typeOfAnimal || search_data_id.animalAge || search_data_id.animalSex || search_data_id.animalSize
         || search_data_id.experience || search_data_id.shelterName">Очистити пошук</button>
         <button class="search" (click)="OpenSearchForm()"> <img src="search.png" alt=""> Пошук</button>
         <button class="delete" (click)="OpeneDelete()"><img src="delete.png" alt="/" class="del"> Видалити</button>
@@ -13,7 +13,7 @@
     <div class="table">
         <table>
             <tr>
-            
+
                 <th>ID</th>
                 <th>Ім'я</th>
                 <th>Прізвище</th>
@@ -27,9 +27,9 @@
                 <th>Досвід</th>
                 <th>Притулок</th>
 
-                
+
             </tr>
-            <tr  *ngFor="let volonter of Volonter | filterBy : search_data_id || search_user_firstName ||search_user_lastName||search_user_contactNumber ||search_user_email ||search_user_typeOfAnimal 
+            <tr  *ngFor="let volonter of Volonter | filterBy : search_data_id || search_user_firstName ||search_user_lastName||search_user_contactNumber ||search_user_email ||search_user_typeOfAnimal
             ||search_user_animalName ||search_user_animalAge ||search_user_animalSex ||search_user_animalSize ||search_user_experience || search_user_shelterName" >                <td>{{volonter.id}}</td>
                 <td>{{volonter.firstName}}</td>
                 <td>{{volonter.lastName}}</td>
@@ -54,12 +54,12 @@
           <span (click)="closeModal()" class="close-button">&times;</span>
                  <h3>Редагування інформації про користувачів</h3>
 
-          
+
 
             <div>
                 <button class="confirm_edit" (click)="SendEditedUser()">Внести зміни</button>
             </div>
-          
+
         </div>
       </div> -->
 
@@ -93,7 +93,7 @@
 
          <label for="sex">Стать:</label>
          <input type="text" [(ngModel)]="search_data_id.animalSex"  placeholder="Стать">
-         
+
          <label for="size">Розмір:</label>
          <input type="text" [(ngModel)]="search_data_id.animalSize"  placeholder="Розмір">
 
@@ -109,11 +109,11 @@
   <div *ngIf="DELETE" class="modal">
     <div class="modal-content">
       <span (click)="closeModalDelete()" class="close-button">&times;</span>
-       
+
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID користувача">
-        
+        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID заявки">
+
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
         </div>
